Remove overflow-x from inline code elements to fix accessibility issue

--- a/share/templates/style.css
+++ b/share/templates/style.css
@@ -319,7 +319,7 @@ img, svg, video, iframe {
   height: auto;
 }
 
-pre, code {
+pre {
   overflow-x: auto;
 }
 
